--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/templatemo-plot-listing.css" />
     <link rel="stylesheet" href="assets/css/animated.css" />
     <link rel="stylesheet" href="assets/css/owl.css" />
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   </head>
 
   <body>
@@ -146,14 +147,14 @@
         </div>
       </div>
     </div>
-
+    <!-- القنوات التلفزيونية المتاحة -->
     <div class="popular-categories">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="section-heading">
-              <h2>Popular Categories</h2>
-              <h6>Check Them Out</h6>
+              <h2>قائمة بجميع القنوات التلفزيونية المتاحة</h2>
+              <h3>(مكة المكرمة والمدينة المنورة)</h3>
             </div>
           </div>
           <div class="col-lg-12">
@@ -162,7 +163,10 @@
                 <div class="row">
                   <div class="col-lg-3">
                     <div class="menu">
-                      <div class="first-thumb active">
+                      <div
+                        class="first-thumb active"
+                        onclick="playLive('https://win.holol.com/live/quran/playlist.m3u8')"
+                      >
                         <div class="thumb">
                           <span class="icon"
                             ><img src="assets/images/search-icon-01.png" alt=""
@@ -170,36 +174,14 @@
                           Apartments
                         </div>
                       </div>
-                      <div>
+                      <div
+                        onclick="playLive('https://win.holol.com/live/sunnah/playlist.m3u8')"
+                      >
                         <div class="thumb">
                           <span class="icon"
                             ><img src="assets/images/search-icon-02.png" alt=""
                           /></span>
                           Food &amp; Life
-                        </div>
-                      </div>
-                      <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img src="assets/images/search-icon-03.png" alt=""
-                          /></span>
-                          Cars
-                        </div>
-                      </div>
-                      <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img src="assets/images/search-icon-04.png" alt=""
-                          /></span>
-                          Shopping
-                        </div>
-                      </div>
-                      <div class="last-thumb">
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img src="assets/images/search-icon-05.png" alt=""
-                          /></span>
-                          Traveling
                         </div>
                       </div>
                     </div>
@@ -212,11 +194,13 @@
                             <div class="row">
                               <!-- <div class="col-lg-5 align-self-center"></div> -->
                               <div class="col">
-                                <video width="100%" height="100%" controls>
-                                  <source
-                                    src="https://www.mp3quran.net/uploads/videos/group1_pbuh/maher.mp4"
-                                    type="video/mp4"
-                                  />
+                                <video
+                                  width="100%"
+                                  height="100%"
+                                  controls
+                                  id="videoLive"
+                                >
+                                  <source src="" type="video/mp4" />
                                   <!-- <source src="" type="video/ogg" /> -->
                                   Your browser does not support the video tag.
                                 </video>
@@ -229,30 +213,20 @@
                         <div>
                           <div class="thumb">
                             <div class="row">
-                              <div class="col-lg-5 align-self-center"></div>
-                              <div class="col-lg-7 align-self-center"></div>
+                              <!-- <div class="col-lg-5 align-self-center"></div> -->
+                              <div class="col">
+                                <video
+                                  width="100%"
+                                  height="100%"
+                                  controls
+                                  id="videoLive"
+                                >
+                                  <source src="" type="video/mp4" />
+                                  <!-- <source src="" type="video/ogg" /> -->
+                                  Your browser does not support the video tag.
+                                </video>
+                              </div>
                             </div>
-                          </div>
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          <div class="thumb">
-                            <div class="row"></div>
-                          </div>
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          <div class="thumb">
-                            <div class="row"></div>
-                          </div>
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          <div class="thumb">
-                            <div class="row"></div>
                           </div>
                         </div>
                       </li>
@@ -302,7 +276,7 @@
           <div class="col-lg-4">
             <div class="contact-us">
               <h4>Contact Us</h4>
-              <p>27th Street of New Town, Digital Villa</p>
+              <p></p>
               <div class="row">
                 <div class="col-lg-6">
                   <a href="#">01091642528</a>
