Created The Main Project Structure

--- a/index.html
+++ b/index.html
@@ -187,18 +187,19 @@
                     </div>
                   </div>
                   <div class="col-lg-9 align-self-center">
-                    <ul class="nacc">
-                      <li class="active">
-                        <div>
-                          <div class="thumb">
-                            <div class="row">
+                    <ul class="nacc" style="height: 450px !important">
+                      <li class="active" style="height: 100% !important">
+                        <div style="height: 100% !important">
+                          <div class="thumb" style="height: 100% !important">
+                            <div class="row" style="height: 100% !important">
                               <!-- <div class="col-lg-5 align-self-center"></div> -->
-                              <div class="col">
+                              <div class="col" style="height: 100% !important">
                                 <video
                                   width="100%"
                                   height="100%"
                                   controls
                                   id="videoLive"
+                                  style="height: 100% !important"
                                 >
                                   <source src="" type="video/mp4" />
                                   <!-- <source src="" type="video/ogg" /> -->
@@ -209,17 +210,18 @@
                           </div>
                         </div>
                       </li>
-                      <li>
-                        <div>
-                          <div class="thumb">
-                            <div class="row">
+                      <li style="height: 100% !important">
+                        <div style="height: 100% !important">
+                          <div class="thumb" style="height: 100% !important">
+                            <div class="row" style="height: 100% !important">
                               <!-- <div class="col-lg-5 align-self-center"></div> -->
-                              <div class="col">
+                              <div class="col" style="height: 100% !important">
                                 <video
                                   width="100%"
                                   height="100%"
                                   controls
                                   id="videoLive"
+                                  style="height: 100% !important"
                                 >
                                   <source src="" type="video/mp4" />
                                   <!-- <source src="" type="video/ogg" /> -->
